# turbovec

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile
.github/workflows/: deploy.yml
benchmarks/results/: compression_synthetic.json  recall_synthetic.json  speed_d1536_4bit_apple_gpu.json
benchmarks/suite/: compression_synthetic.py  recall_synthetic.py  speed_d1536_4bit_apple_gpu.py
docs/: WIKI_COMPARISON.md
plan/: REVIEW.md
planning/: PLAN.md  REVIEW.md
scripts/: export_api_key.sh
turbovec-python/: pyproject.toml
turbovec-python/app/: app.py  auth.py  ingest.py  server.py  store.py  ui.py
turbovec-python/app/data/: corpus.txt
turbovec-python/app/templates/: index.html
turbovec-python/python/turbovec/mlx/: __init__.py  _kernels.py
turbovec-python/tests/: test_e2e_rag.py
